# si47xx_radio

./: .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: cli.rs  console.rs  events.rs  main.rs  serial_logger.rs
