[package]
name = "si47x_radio"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-futures = { version = "0.1.2" }
embassy-sync = { version = "0.7.2", features = ["log"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
embassy-nrf = { version = "0.8.0", features = ["log", "nrf5340-app-s", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
embedded-io-async = { version = "0.6.1" }
embedded-io = { version = "0.6.0" }
embedded-storage = "0.3.1"
embedded-cli = "0.2.1"
embedded-hal = { version = "1.0" }
embedded-hal-async = { version = "1.0" }
static_cell = "2"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-rtt"] }
si473x = { git = "https://github.com/apapkovskiy/si473x-rs.git" }
heapless = "0.9.2"
critical-section = "1.2.0"
log = "0.4.29"
